change process spawning technique